# vllm-vcr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.tap  LICENSE-MIT  PLAN.md  README.md  book.toml  build.rs  compat.toml  deny.toml  entrypoint.sh  hf_dataset_sample.jsonl  justfile  rust-toolchain.toml  test_dataset_replay.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/setup-cluster-auth/: action.yaml
.github/actions/setup-sccache/: action.yaml
.github/workflows/: ci.yml  docker.yml  docs.yml  nightly-canary.yml  nightly-golden-capture.yml  release.yml  trace-validation.yml  vllm-release-watch.yml
ci/: capture-nightly-goldens.sh  pin-vllm-rev.py
conformance/: manifest.toml
crates/sim-compat/: Cargo.toml
crates/sim-compat/src/: lib.rs
crates/sim-protocol/: Cargo.toml
crates/sim-protocol/src/: frontend_connect.rs  kvparams.rs  lib.rs  mock_engine.rs  step_stats.rs  wire.rs
crates/sim-s3/: Cargo.toml
crates/sim-s3/src/: lib.rs
crates/sim-tap/: Cargo.toml
crates/sim-tap/src/: lib.rs  step_stats.rs  tap.rs
crates/sim-tap/tests/: mm_decode_groundtruth.rs
crates/sim-trace/: Cargo.toml
crates/sim-trace/src/: config_hash.rs  dataset_convert.rs  latency.rs  lib.rs  perfetto.rs  trace.rs  trace_convert.rs
crates/sim-trace/tests/: trace_convert.rs
demo/: README.md  agent-replay.cast  agent-replay.sh  agent-replay.tape  itl-sweep.sh
deploy/: README.md
deploy/llm-d-pd/: README.md  helmfile.yaml
deploy/llm-d-pd/modelserver/: decode-deployment.yaml  kustomization.yaml  prefill-deployment.yaml  serviceaccount.yaml
deploy/llm-d-pd/router/: base.values.yaml  pd-disaggregation.values.yaml
deploy/llm-d-prefix-cache/: README.md  helmfile.yaml
deploy/llm-d-prefix-cache/modelserver/: deployment.yaml  kustomization.yaml  serviceaccount.yaml
deploy/llm-d-prefix-cache/router/: base.values.yaml  precise-prefix-cache-routing.values.yaml
deploy/trace-capture/: Dockerfile.frontend-cpu  README.md  UPSTREAM-PR-engine-core-sampling-params.md  conformance-queue.yaml  dg-image-smoke.sh  diffusiongemma-capture.yaml  diffusiongemma-mm-frame-findings.md  diffusiongemma-notap.yaml  diffusiongemma-single.yaml  engine-core-sampling-params-serde-default.patch  g4-image-smoke.sh  gemma3-capture.yaml  gemma3-model-cache-pvc.yaml  gemma4-31b-bf16-capture.yaml  gemma4-31b-capture.yaml  gemma4-capture.yaml  gemma4-e4b-capture.yaml  gemma4-e4b-model-cache-pvc.yaml  gemma4-mm-findings.md  gemma4-model-cache-pvc.yaml  gen-capture-jobs.py  h200-capture-agentic.yaml  h200-capture.yaml  loadgen.py  mm_encode_groundtruth.py  models.toml  offline-replay.yaml  run-capture.sh  run-validation.sh  tap-sidecar-patch.yaml  validation-jobs.yaml  validation-runner.sh
deploy/trace-capture/base/: conformance-queue.yaml  diffusiongemma-capture.yaml  diffusiongemma-notap.yaml  diffusiongemma-single.yaml  gemma3-capture.yaml  gemma4-31b-bf16-capture.yaml  gemma4-31b-capture.yaml  gemma4-capture.yaml  gemma4-e4b-capture.yaml  h200-capture-agentic.yaml  h200-capture.yaml  kustomization.yaml  offline-replay.yaml
deploy/trace-capture/base/pvcs/: gemma3-model-cache-pvc.yaml  gemma4-31b-bf16-model-cache-pvc.yaml  gemma4-31b-model-cache-pvc.yaml  gemma4-e4b-model-cache-pvc.yaml  gemma4-model-cache-pvc.yaml
deploy/trace-capture/overlays/inference-sim/: kustomization.yaml
docs/: SUMMARY.md  agentic-epp-search-plan.md  agentic-offline-replay.md  architecture.md  completions.md  conformance.md  dependencies.md  deploy.md  engine-internals.md  examples.md  install.md  introduction.md  lora.md  multi-version-shim.md  nixl.md  perfetto.md  quick-start.md  status.md  testing.md  verifying-releases.md  versioning.md
docs/theme/: vllm-vcr.css
docs/trace-replay/: arrival-replay.md  calibration-demo.md  concepts.md  content-identical.md  engine-captures.md  index.md  pacing.md  prefix-cache.md  spec-diffusion.md
examples/: kv_event_emitter.rs
scripts/: e2e.sh  e2e_generate.sh  e2e_lora.sh  kv_events_smoke.sh  make_figures.sh  pd_control.sh  plot_calibration.py
scripts/kv_events_smoke/: go.mod  go.sum  main.go
src/: blockpool.rs  calibrate.rs  conformance.rs  dataplane.rs  engine.rs  engine_core.rs  inspect.rs  io.rs  kvevents.rs  latency.rs  lib.rs  lora.rs  main.rs  record.rs  sched.rs  tap.rs  tokens.rs  trace.rs  trace_convert.rs
tests/: README.md  calibrate.rs  closed_loop_prefix_replay.rs  completions.rs  conformance.rs  dataset_replay_e2e.rs  diffusion_replay_demo.rs  engine_core_e2e.rs  engine_synthetic_e2e.rs  gemma4_replay_demo.rs  kv_events_pubsub.rs  nixl_loopback.rs  real_trace_replay.rs  spec_replay_fidelity.rs  synthetic_trace_generator.rs  tap_e2e.rs  test_helpers.rs  trace_convert.rs  trace_validation_ci.rs
tests/fixtures/: diffusion_block_trace.jsonl  gemma4_mm_trace.jsonl  guidellm_sample.json  spec_decode_trace.jsonl
tests/fixtures/synthetic/: batch_context_trace.jsonl  edge_cases_trace.jsonl  simple_trace.jsonl  speculative_trace.jsonl
traces/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs  version.rs
