[workspace]
members = [".", "crates/sim-trace", "crates/sim-protocol", "crates/sim-tap", "crates/sim-compat"]
# Resolver 3 is the edition-2024 dependency resolver (MSRV-aware). A virtual or
# multi-member workspace does not inherit it from a member's edition, so it must
# be set explicitly here.
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neuralmagic/inference-simulator-rs"

[workspace.dependencies]
# Member crates, referenced by path.
sim-trace = { path = "crates/sim-trace" }
sim-protocol = { path = "crates/sim-protocol" }
sim-tap = { path = "crates/sim-tap" }
sim-compat = { path = "crates/sim-compat" }

# The real vLLM engine-core protocol + reusable mock-engine handshake harness,
# pulled straight from the in-tree Rust frontend so the wire format never drifts.
# Rev contains vllm-project/vllm#45848 (serde defaults), so no fork patch is needed.
vllm-engine-core-client = { git = "https://github.com/vllm-project/vllm.git", rev = "17bc1445562435b608041d434e9738440954159c" }

anyhow = "1.0.100"
clap = { version = "4.5.38", features = ["derive", "env"] }
flate2 = "1.1.9"
futures = "0.3.31"
rand = "0.9.2"
rmpv = { version = "1.3.1", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_tuple = "1.1.3"
sha2 = "0.10.9"
toml = "0.9.8"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
# Must match the engine-core-client's zeromq so socket types unify across the git dep.
zeromq = { version = "0.6.0", default-features = false, features = ["tokio-runtime", "all-transport"] }

[package]
name = "inference-simulator-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A mock vLLM V1 engine-core backend that speaks the real ZMQ/msgpack protocol, with a NIXL CPU/RDMA data plane for GPU-free prefill/decode testing."

[[bin]]
name = "inference-sim"
path = "src/main.rs"

[[bin]]
name = "inference-sim-trace"
path = "src/bin/inference_sim_trace.rs"

[features]
default = []
# Real NIXL KV data plane. Needs libnixl + UCX installed (Linux, RDMA or shared-memory).
nixl = ["dep:nixl-sys", "dep:base64"]
# Compile the NIXL bindings against stubs so the data-plane code typechecks on
# machines without libnixl (e.g. macOS dev boxes). Won't actually move bytes.
nixl-stub = ["nixl", "nixl-sys/stub-api"]

[dependencies]
sim-trace = { workspace = true }
sim-protocol = { workspace = true }
sim-compat = { workspace = true }
vllm-engine-core-client = { workspace = true }

# NIXL bindings, pinned to the same nixl source the container builds libnixl from, so the
# crate resolves identically on macOS (stub) and in the image (real). Optional: only
# compiled with the `nixl`/`nixl-stub` features so the default (bird-one) build needs nothing.
nixl-sys = { git = "https://github.com/ai-dynamo/nixl.git", rev = "41685d39", optional = true }
base64 = { version = "0.22.1", optional = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rmpv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_tuple = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeromq = { workspace = true }
flate2 = { workspace = true }

# build.rs stamps the compat.toml default line's tag into the binary as
# VLLM_TARGET_VERSION, so the parser must be available at build time.
[build-dependencies]
sim-compat = { workspace = true }
