[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Repo automation tasks (compat.toml build matrices, Cargo.toml vLLM pinning) run via `cargo xtask`. Reuses sim-compat so compat.toml is parsed in one place."
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sim-compat = { workspace = true }
toml_edit = { workspace = true }
