[package]
name = "sim-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parsing for compat.toml (the vLLM support window) and the conformance golden manifest. vLLM-protocol-free so it can be used from build scripts, the runtime version guard, and the conformance runner."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
