[package]
name = "sim-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "S3 object I/O for inference-sim trace files: materialize a remote trace to a local scratch path before the sync readers run, and upload a finalized local trace after the gzip trailer is written. Kept separate from sim-trace so the schema crate stays free of the AWS SDK and an async runtime."

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
