[package]
name = "sim-tap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine-core recording tap: a transparent ZMQ proxy between a real vLLM frontend and engine-core that records per-request timing into a JSONL trace."

[[bin]]
name = "inference-sim-tap"
path = "src/bin/inference_sim_tap.rs"

[dependencies]
sim-trace = { workspace = true }
sim-protocol = { workspace = true }
sim-compat = { workspace = true }
vllm-engine-core-client = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeromq = { workspace = true }

[dev-dependencies]
# The tap's e2e test drives the simulator itself as the "real engine" behind
# the tap, so it needs the root crate. Root never depends on sim-tap, so this
# introduces no cycle.
inference-simulator-rs = { path = "../.." }
futures = { workspace = true }
