[package]
name = "sim-tap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Engine-core recording tap: a transparent ZMQ proxy between a real vLLM frontend and engine-core that records per-request timing into a JSONL trace."

[dependencies]
sim-trace = { workspace = true }
sim-protocol = { workspace = true }
sim-compat = { workspace = true }
vllm-engine-core-client = { workspace = true }

anyhow = { workspace = true }
# Only for the TokenRecording ValueEnum that the record front-end parses.
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zeromq = { workspace = true }
